<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.activityfragments.MainFragment"
        android:label="@string/main_nav"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_edit"
        android:name="com.example.activityfragments.EditFragment"
        android:label="@string/edit_nav"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.activityfragments.InfoFragment"
        android:label="@string/info_nav"
        tools:layout="@layout/fragment_info" />

</navigation>